--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   cloud_firestore: ^0.13.6
   provider: ^4.1.3
   flutter_staggered_grid_view: ^0.3.2
+  overlay_support: ^1.0.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
